# python_widget

./: .gitignore  README.md  main.py  pyproject.toml
python_widget/: LastfiveTransactions.py  utils.py
tests/: conftest.py  test_utils.py
