[tool.poetry]
name = "python-widget"
version = "0.1.0"
description = ""
authors = ["Sergey <serega.tiuriuhanov94@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.3.2"
utils = "^1.0.1"
transactions = "^0.2.0"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
